# gait-analysis

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: azure-deploy.yml
api/: index.py
docs/: 01-clinical-landscape-and-build-plan.md  02-phase1-quickstart.md  03-quickmode-3d.md  04-clinical-signatures.md  05-end-to-end-plan.md  06-ui-and-rendering-plan.md  07-interpretation-and-treatment.md  08-deployment-azure.md  09-roadmap.md  10-setup-and-capture.md  11-clinical-evidence.md  12-tier2-opensim-worker.md  13-clinical-movement-research.md
scripts/: benchmark_local.py  compare_mot.py  debug_overlay.py  gt_runner.py  test_augmented_chain.py
setup/: deploy_azure.sh  deploy_worker_azure.sh  setup_macos.sh
src/gait_analysis/: __init__.py  config.py  pipeline.py
src/gait_analysis/analysis/: __init__.py  gait_cycle.py  gait_metrics_2d.py  interpretation.py  kinematics.py  movement_2d.py  movement_report.py  normative.py  report.py  sagittal2d.py  screening_report.py  series_export.py  signatures.py  spatiotemporal.py  spatiotemporal_3d.py  synced_viewer.py  tasks.py  tug_2d.py  validate.py  viz3d.py
src/gait_analysis/biomech/: __init__.py  augmented_ik.py  blazepose_to_trc.py  build_marked_model.py  export_model_motion.py  hybrid3d.py  (+7 more)
tests/: test_auth.py  test_export_model_motion.py  test_gait_cycle.py  test_gait_metrics_2d.py  test_kinematics.py  test_movement_2d.py  test_opensim_pipeline.py  test_phase.py  test_report.py  test_sagittal2d.py  test_series_export.py  test_signatures.py  test_spatiotemporal.py  test_spatiotemporal_3d.py  test_synced_viewer.py  test_tasks.py  test_tracks.py  test_trc.py  test_tug_2d.py  test_validate.py  test_viz3d.py  test_web.py
(+12 files in other folders)
